Add direct player release uploads
